--- a/ejercicio/Solucion.html
+++ b/ejercicio/Solucion.html
@@ -16,6 +16,7 @@
     class Persona
     Persona : +String nombre
     Persona : +String apellido
+    Persona : +String direccion
     Persona : +Int edad
     
     
